Feat(Core):Migrating from Quirks to Capability: DeepCarpetCleaning ControlCapability
