# backend/lib/webserver/capabilityRouters/doc/SimpleToggleCapabilityRouter.openapi.json
@@ -307,6 +307,83 @@
       }
     }
   },
+  "/api/v2/robot/capabilities/DeepCarpetCleaningControlCapability": {
+    "get": {
+      "tags": [
+        "DeepCarpetCleaningControlCapability"
+      ],
+      "summary": "Get Deep Carpet Cleaning setting",
+      "responses": {
+        "200": {
+          "description": "Ok",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "enabled": {
+                    "type": "boolean"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "put": {
+      "tags": [
+        "DeepCarpetCleaningControlCapability"
+      ],
+      "summary": "Set Deep Carpet Cleaning setting",
+      "requestBody": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "action": {
+                  "type": "string",
+                  "enum": [
+                    "enable",
+                    "disable"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      },
+      "responses": {
+        "200": {
+          "$ref": "#/components/responses/200"
+        },
+        "400": {
+          "$ref": "#/components/responses/400"
+        }
+      }
+    }
+  },
+  "/api/v2/robot/capabilities/DeepCarpetCleaningControlCapability/properties": {
+    "get": {
+      "tags": [
+        "DeepCarpetCleaningControlCapability"
+      ],
+      "summary": "Get various capability-related properties",
+      "responses": {
+        "200": {
+          "description": "Ok",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object"
+              }
+            }
+          }
+        }
+      }
+    }
+  },
   "/api/v2/robot/capabilities/FloorMaterialDirectionAwareNavigationControlCapability": {
     "get": {
       "tags": [
